hphp/hack/test/typecheck/construct/missing_init.php
<?hh

class C {
  private int $x;
  private string $y;

  public function __construct() {
    // does nothing!
  }
}
